# workiq-agents-demo

./: .env.example  .gitignore  README.md  config.py  main.py  mcp_config.json  pyproject.toml
steps/: step1_read_transcript.py  step2_plan_tasks.py  step3_create_repo.py  step4_create_issues.py  step5_assign_agents.py  step6_review_prs.py
